--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "pantry-api",
   "version": "1.0.0",
   "description": "API for pantry app",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "MCC",
+  "license": "ISC",
+  "type": "module",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.1.2",
+    "@types/express": "^4.17.9"
+  }
 }
