--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "start": "node dist/server.js"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npx pretty-quick --staged"
+    }
+  },
   "author": "MCC",
   "license": "ISC",
   "type": "module",
@@ -13,7 +18,10 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "typescript": "^4.1.2",
-    "@types/express": "^4.17.9"
+    "@types/express": "^4.17.9",
+    "husky": "^5.0.4",
+    "prettier": "^2.2.0",
+    "pretty-quick": "^3.1.0",
+    "typescript": "^4.1.2"
   }
 }
