--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API for pantry app",
   "main": "server.ts",
   "scripts": {
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -19,9 +20,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.15",
     "husky": "^5.0.4",
+    "jest": "^26.6.3",
     "prettier": "^2.2.0",
     "pretty-quick": "^3.1.0",
+    "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   }
 }
