--- a/package.json
+++ b/package.json
@@ -16,9 +16,20 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "express": "^4.17.1"
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.2.0",
+    "morgan": "^1.10.0",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/helmet": "^4.0.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/morgan": "^1.9.2",
+    "@types/pg": "^7.14.7",
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "husky": "^5.0.4",
