--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "server.ts",
   "scripts": {
     "start": "node dist/server.js",
+    "build": "webpack",
     "test": "jest"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npx pretty-quick --staged"
+      "pre-commit": "npx pretty-quick --staged eslint--fix"
     }
   },
   "author": "MCC",
@@ -25,6 +26,8 @@
     "pg": "^8.5.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.7",
+    "@babel/preset-env": "^7.12.7",
     "@types/compression": "^1.7.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.9",
@@ -32,11 +35,24 @@
     "@types/jest": "^26.0.15",
     "@types/morgan": "^1.9.2",
     "@types/pg": "^7.14.7",
+    "@types/webpack-bundle-analyzer": "^3.9.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.1",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "husky": "^5.0.4",
     "jest": "^26.6.3",
     "prettier": "^2.2.0",
     "pretty-quick": "^3.1.0",
+    "ts-loader": "^8.0.11",
     "ts-node": "^9.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "webpack": "^5.6.0",
+    "webpack-bundle-analyzer": "^4.1.0",
+    "webpack-cli": "^4.2.0"
   }
 }
