--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "pantry-api",
   "version": "1.0.0",
   "description": "API for pantry app",
-  "main": "server.ts",
+  "main": "src/server.ts",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node dist/bundle.js",
     "build": "webpack",
     "test": "jest"
   },
@@ -15,19 +15,22 @@
   },
   "author": "MCC",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "morgan": "^1.10.0",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "pg-native": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.7",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/compression": "^1.7.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.9",
@@ -36,19 +39,13 @@
     "@types/morgan": "^1.9.2",
     "@types/pg": "^7.14.7",
     "@types/webpack-bundle-analyzer": "^3.9.0",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
-    "eslint": "^7.14.0",
-    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
     "husky": "^5.0.4",
     "jest": "^26.6.3",
     "prettier": "^2.2.0",
     "pretty-quick": "^3.1.0",
-    "ts-loader": "^8.0.11",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2",
     "webpack": "^5.6.0",
