--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,16 +7,16 @@ jobs:
     steps:
       - checkout
       - run: echo "Hellloooo!"
-  test:
+  build:
     docker:
       - image: cimg/node:15.2
     steps:
       - checkout
       - run: npm install
-      - run: npm test
+      - run: npm run build
 
 workflows:
-  hello-test:
+  hello-build:
     jobs:
       - hello
-      - test
+      - build
