refactor: revise inclusion path to new location of db file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,6 +59,6 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["src/*.ts"],
+  "include": ["src/*.ts", "src/db/db.ts"],
   "exclude": ["node_modules"]
 }
