--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.12.5",
+    "@types/node-fetch": "^2.5.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "pg": "^8.5.1"
   },
   "devDependencies": {
