--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.12.5",
-    "@types/node-fetch": "^2.5.7",
+    "bcrypt": "^5.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.5.1"
   },
   "devDependencies": {
@@ -32,13 +36,19 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
+    "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.8",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.9",
     "@types/helmet": "^4.0.0",
     "@types/jest": "^26.0.15",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
+    "@types/node-fetch": "^2.5.7",
+    "@types/passport": "^1.0.4",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "@types/pg": "^7.14.7",
     "@types/webpack-bundle-analyzer": "^3.9.0",
     "babel-jest": "^26.6.3",
