--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "typescript": "^4.1.2",
     "webpack": "^5.6.0",
     "webpack-bundle-analyzer": "^4.1.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-node-externals": "^2.5.2"
   }
 }
