--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npx pretty-quick --staged && npx eslint--fix"
+      "pre-commit": "npx pretty-quick --staged && npx eslint src --quiet"
     }
   },
   "author": "MCC",
@@ -51,9 +51,16 @@
     "@types/passport-local": "^1.0.33",
     "@types/pg": "^7.14.7",
     "@types/webpack-bundle-analyzer": "^3.9.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
+    "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-webpack-plugin": "^2.4.1",
     "husky": "^5.0.4",
     "jest": "^26.6.3",
     "prettier": "^2.2.0",
