--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/passport-local": "^1.0.33",
     "@types/pg": "^7.14.7",
     "@types/webpack-bundle-analyzer": "^3.9.0",
+    "@types/webpack-node-externals": "^2.5.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "babel-jest": "^26.6.3",
