--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - image: cimg/node:15.2
     steps:
       - checkout
-      - run: npm install
+      - run: npm ci
       - run: npm run build
 
 workflows:
