--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.9",
     "@types/node-fetch": "^2.5.7",
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/pg": "^7.14.7",
+    "@types/webpack": "^4.41.25",
     "@types/webpack-bundle-analyzer": "^3.9.0",
     "@types/webpack-node-externals": "^2.5.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
